--- a/app/index.html
+++ b/app/index.html
@@ -38,9 +38,9 @@
 			<div class="row">
 				<div class="col-sm-3 col-md-2 sidebar">
 					<ul class="nav nav-sidebar">
-						<li class="active"><a href="#/in_theaters">正在热映</a></li>
-						<li><a href="#/coming_soon">即将上映</a></li>
-						<li><a href="#/top250">豆瓣电影TOP250</a></li>
+						<li class="active"><a href="#/in_theaters/1">正在热映</a></li>
+						<li><a href="#/coming_soon/1">即将上映</a></li>
+						<li><a href="#/top250/1">豆瓣电影TOP250</a></li>
 					</ul>
 				</div>
 				<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main" ng-view>
@@ -53,8 +53,7 @@
 	<!-- 主模块 -->
 	<script src="app.js"></script>
 	<script src="components/http.js"></script>
-	<script src="in_theaters/controller.js"></script>
-	<script src="coming_soon/controller.js"></script>
-	<script src="top250/controller.js"></script>
+	<script src="movie_list/controller.js"></script>
+
 </body>
 </html>
