--- a/app/index.html
+++ b/app/index.html
@@ -37,10 +37,10 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-sm-3 col-md-2 sidebar">
-					<ul class="nav nav-sidebar">
-						<li class="active"><a href="#/in_theaters/1">正在热映</a></li>
-						<li><a href="#/coming_soon/1">即将上映</a></li>
-						<li><a href="#/top250/1">豆瓣电影TOP250</a></li>
+					<ul  class="nav nav-sidebar">
+						<li auto-focus ><a href="#/in_theaters/1">正在热映</a></li>
+						<li auto-focus ><a href="#/coming_soon/1">即将上映</a></li>
+						<li auto-focus ><a href="#/top250/1">豆瓣电影TOP250</a></li>
 					</ul>
 				</div>
 				<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main" ng-view>
@@ -51,6 +51,7 @@
 	<script src="bower_components/angular/angular.js"></script>
 	<script src="bower_components/angular-route/angular-route.js"></script>
 	<!-- 主模块 -->
+	<script src="components/auto-focus.js"></script>
 	<script src="app.js"></script>
 	<script src="components/http.js"></script>
 	<script src="movie_list/controller.js"></script>
