--- a/app/index.html
+++ b/app/index.html
@@ -23,12 +23,10 @@
 				<div id="navbar" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="#">Dashboard</a></li>
-						<li><a href="#">Settings</a></li>
-						<li><a href="#">Profile</a></li>
-						<li><a href="#">Help</a></li>
 					</ul>
-					<form class="navbar-form navbar-right">
-						<input type="text" class="form-control" placeholder="Search...">
+					<!-- 搜索 -->
+					<form class="navbar-form navbar-right" ng-controller="searchController" ng-submit="search()">
+						<input type="text" class="form-control" placeholder="Search..." ng-model='input'>
 					</form>
 				</div>
 			</div>
