'基本上完成了'

--- a/app/index.html
+++ b/app/index.html
@@ -53,6 +53,7 @@
 	<script src="app.js"></script>
 	<script src="components/http.js"></script>
 	<script src="movie_list/controller.js"></script>
+	<script src="movie_detail/controller.js"></script>
 
 </body>
 </html>
