--- a/app/movie_list/view.html
+++ b/app/movie_list/view.html
@@ -1,6 +1,6 @@
 <h1 class="pages-header">{{title}}</h1>
 <div class="list-group">
-  <a href="{{item.alt}}" class="list-group-item" ng-repeat="item in subjects">
+  <a ng-href="#/detail/{{item.id}}" class="list-group-item" ng-repeat="item in subjects">
   	<span class="badge">{{item.rating.average}}</span>
     <div class="media">
   <div class="media-left">
